// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Newsletters API Can add a newsletter - with custom sender_email 1: [body] 1`] = `
Object {
  "meta": Object {
    "sent_email_verification": Array [
      "sender_email",
    ],
  },
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter with custom sender_email",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "my-test-newsletter-with-custom-sender_email",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "604",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email 3: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 5,
    },
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Default Newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "my-test-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter with custom sender_email",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "my-test-newsletter-with-custom-sender_email",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Weekly newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "weekly-newsletter",
      "sort_order": 2,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "2615",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add a newsletter 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-test-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
<<<<<<< HEAD
  "content-length": "540",
=======
  "content-length": "502",
>>>>>>> 6536dcea4 (added tests)
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add a newsletter 3: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 4,
    },
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Default Newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-test-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Weekly newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "weekly-newsletter",
      "sort_order": 2,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
<<<<<<< HEAD
  "content-length": "2190",
=======
  "content-length": "2080",
>>>>>>> 6536dcea4 (added tests)
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can browse newsletters 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 5,
    },
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Default Newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-test-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter with custom sender_email",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "my-test-newsletter-with-custom-sender_email",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Weekly newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "weekly-newsletter",
      "sort_order": 2,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can browse newsletters 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
<<<<<<< HEAD
  "content-length": "2190",
=======
  "content-length": "2615",
>>>>>>> 6536dcea4 (added tests)
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can edit newsletters 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 1,
      "next": 2,
      "page": 1,
      "pages": 5,
      "prev": null,
      "total": 5,
    },
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Default Newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can edit newsletters 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "618",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can edit newsletters 3: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can edit newsletters 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "539",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can edit newsletters with updated sender_email 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 1,
      "next": 2,
      "page": 1,
      "pages": 5,
      "prev": null,
      "total": 5,
    },
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can edit newsletters with updated sender_email 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
<<<<<<< HEAD
  "content-length": "539",
=======
  "content-length": "599",
>>>>>>> 6536dcea4 (added tests)
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can edit newsletters with updated sender_email 3: [body] 1`] = `
Object {
  "meta": Object {
    "sent_email_verification": Array [
      "sender_email",
    ],
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can edit newsletters with updated sender_email 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "567",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can read a newsletter 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can read a newsletter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "515",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can verify property updates 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": "verify@example.com",
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can verify restricted property updates 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": "verify@example.com",
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "visibility": "members",
    },
  ],
}
`;
